traefik2/test/ingress-test.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: foo
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`*`)
    kind: Rule
    services:
    - name: foo
      port: 8080
